--- a/jmacro-app/src/main/resources/messages.properties
+++ b/jmacro-app/src/main/resources/messages.properties
@@ -6,8 +6,8 @@ app.icon.32=/icons/32.png
 app.icon.64=/icons/64.png
 
 app.icon.help=/icons/error.png
-app.icon.theme=/icons/palette.png
-app.icon.processmanager=icons/processmanager.png
+app.icon.theme=/icons/theme.png
+app.icon.processmanager=/icons/processmanager.png
 app.icon.about=/icons/about.png
 app.icon.exit=/icons/exit.png
 
