building the main interface

--- a/jmacro-app/src/main/resources/messages.properties
+++ b/jmacro-app/src/main/resources/messages.properties
@@ -1,4 +1,7 @@
 app.title=Code Suite
+app.id=${project.groupId}-${project.artifactId}
+app.version=${project.version}
+app.created=${project.created}
 
 # IMAGES AND ICONS
 app.icon.16=/icons/16.png
@@ -10,8 +13,22 @@ app.icon.theme=/icons/theme.png
 app.icon.processmanager=/icons/processmanager.png
 app.icon.about=/icons/about.png
 app.icon.exit=/icons/exit.png
+app.icon.recording=/icons/record.png
 
 app.images.logo=/images/logo.png
 app.images.logo.simple=/images/logo-simple.png
 app.images.about=/images/about-logo.png
 
+app.label.new=New
+app.label.run=Run
+app.label.settings=Settings
+app.label.help=Help
+app.label.about=About
+app.label.exit=Exit
+app.label.version=Version
+app.label.created=Created
+app.label.stop=Stop
+
+app.messages.about.copyrights=Copyrights Message
+app.messages.about.vendor=Vendor Message
+app.messages.recording.macro=Recording Macro
